--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="main_container">
                 <div class="main_content">
                     <div class="left">
-                        <h1 class="course">Курси програмування у Луцьку</h1>
+                        <h2 class="course">Курси програмування у Луцьку</h2>
                         <p class="text">Сфера ІТ розвивається максимально швидко. Зараз дуже<br> популярно здобувати освіту, що пов'язана з ІТ. Існує лише<br> одна проблема - брак дійсно кваліфікованих спеціалістів в <br>Україні. Під час навчання в університеті ми отримуємо<br> мало практики і "живих", реальних кейсів. IT школа OXIT <br>створила таку методику навчання, при якій за короткий<br> час ви отримаєте необхідні знання, щоб стати IT<br> спеціалістом. Чекаємо вас на наших курсах з <br>програмування в Луцьку. Старт наступного курсу 3 серпня.</p>
                     </div>
                     <div class="right">
@@ -64,7 +64,7 @@
         <div class="build_container">
             <div class="wrapper">
                 <div class="build_title">
-                    <h2 style="text-decoration:none; color: #252525;">Курс "Розробка сайтів"</h2>
+                    <h2 style="text-decoration:none; font-weight: 400; font-size: 27px; color: #252525;">Курс "Розробка сайтів"</h2>
                 </div>
             <div class="build_content">
                 <div class="site_block1">
@@ -117,17 +117,24 @@
 
 
         <div class="slider_container">
+            <div class="slider_build"><h2 style="text-align:center; padding-top: 50px; font-weight: 400;">Що кажуть студенти наших курсів:</h2></div>
             <div class="slider_content">
                <div class="slider">
                 <div class="slider__item filter">
-                    <img src="img/viktor.png" alt="slide">
+                    <p style="text-align:center; font-size: 16px; color: #787878; padding-left: 200px; padding-right: 200px; padding-top: 30px;">Під час проходження курсів я навчився створювати не досить складні сайти та знайшов справу, якою хочу займатись. Після успішного завершення курсів мені надали можливість продовжити навчання в якості Intern Site Builder. Зараз я можу з впевненістю сказати, що Drupal та Oxit кардинально змінили моє життя.</p>
+                    <h3 style="text-align:center; color: #252525; padding-top: 30px; font-weight: 400;">Коля</h3>
+                    <p style="text-align:center; color:#333333; font-size: 13px; padding-top: 8px; padding-bottom: 50px;" >Drupal developer</p>
                 </div>
                 <div class="slider__item">
-                    <img src="img/vova.png" alt="slide">
+                    <p style="text-align:center; font-size: 16px; color: #787878; padding-left: 200px; padding-right: 200px; padding-top: 30px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id vehicula tellus. Sed fermentum convallis tellus eu tempus. In lacus eros, suscipit eleifend venenatis sed, vulputate ut arcu. Curabitur id lectus faucibus, consequat sem nec, commodo nunc. Donec et imperdiet elit. Phasellus consectetur et lacus vel tempor. </p>
+                    <h3 style="text-align:center; color: #252525; padding-top: 30px; font-weight: 400;">Олександр</h3>
+                    <p style="text-align:center; color: #333333; font-size: 13px; padding-top: 8px;" >Drupal developer</p>
                 </div>
                 <div class="slider__item">
-                    <img src="img/mark.png" alt="slide">
-                    </div>
+                    <p style="text-align:center; font-size: 16px; color: #787878; padding-left: 200px; padding-right: 200px; padding-top: 30px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id vehicula tellus. Sed fermentum convallis tellus eu tempus. In lacus eros, suscipit eleifend venenatis sed, vulputate ut arcu. Curabitur id lectus faucibus, consequat sem nec, commodo nunc. Donec et imperdiet elit. Phasellus consectetur et lacus vel tempor. </p>
+                    <h3 style="text-align:center; color: #252525; padding-top: 30px; font-weight: 400;">Микола</h3>
+                    <p style="text-align:center; color: #333333; font-size: 13px; padding-top: 8px;" >Drupal developer</p>
+                </div>
                 </div>
         </div>
         </div>
@@ -136,15 +143,44 @@
         <div class="video_wrapper">
             <div class="video_content">
                 <div class="text">
-                    <h2>Відео</h2>
+                    <h2 style="font-weight:400;">Відео</h2>
                     <p>Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.</p> 
                 </div>
                 <div class="video"><iframe width="1020" height="520" src="https://www.youtube.com/embed/AMkidiqkgJ8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
             </div>
         </div>
-
-
-
+     <div class="slider_container">
+            <div class="slider_build"><h2 style=" font-family: Open  Sans; font-weight: 400; font-size: 27px; text-align:center; padding-top: 30px; padding-bottom: 20px;">Наші ментори</h2></div>
+            <div class="slider_content">
+            <div class="slider">
+                <div class="slider__item filter">
+                    <img style="float: left; margin-right: 80px; margin-bottom: 90px;" src="img/viktor.png" alt="h" >
+                    <p style="color:#2476c9; margin-top: 15px; font-weight: 600;">Віктор</p>
+                    <p style="margin-top:25px; margin-bottom: 15px;" >Майбутнім управлінцям неабияк пощастило - адже з ними ділитиметься досвідом управлінець з величезним досвідом! Сам засновник і CEO компанії InternetDevels, Віктор Левандовський, висловив бажання бути викладачем на курсах проект-менеджменту.</p>
+                    <p style="margin-top:0;  margin-bottom: 15px;">Віктору є що про що розповісти. Він знає все про створення та керування великими компаніями, ефективну комунікацію, успішні проекти і багато чого іншого. При цьому він ніколи не скаже, що знає все - саморозвиток для нього не закінчується жодної хвилини.</p>
+                    <p style="margin-top:0;  margin-bottom: 15px;">На книжкових полицях Віктора сотні прочитаних книг про управління і не тільки. А от заповітні мрії не стоять на полиці, бо Віктор вміє впевнено йти до їхнього здійснення. Тільки недавно він передавав усім привіт з Ельбрусу - найвищої точччки Європи.</p>
+                    <p style="margin-top:0;  margin-bottom: 15px;">Буде нестримна, мов гісрька лавина, енергія, помножена на мудрість і досвід. І ви таке пропустите? Записуйтесь уже зараз!</p>
+                </div>
+                <div class="slider__item">
+                    <img style="float: left; margin-right: 80px; margin-bottom: 90px;" src="img/vova.png" alt="h" width="350" height="350" >
+                    <p style="color:#2476c9; margin-top: 15px; font-weight: 600;">Вова</p>
+                    <p style="margin-top:25px; margin-bottom: 15px;" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing elit ut aliquam purus sit. Neque convallis a cras semper auctor neque vitae tempus. Pellentesque adipiscing commodo elit at imperdiet dui.</p>
+                    <p style="margin-top:0;  margin-bottom: 15px;">Neque convallis a cras semper auctor neque vitae tempus. Pellentesque adipiscing commodo elit at imperdiet dui. </p>
+                    <p style="margin-top:0;  margin-bottom: 15px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing elit ut aliquam purus sit. Neque convallis a cras semper auctor neque vitae tempus. Pellentesque adipiscing commodo elit at imperdiet dui. </p>
+                    <p style="margin-top:0;  margin-bottom: 15px;">Adipiscing elit ut aliquam purus sit. Neque convallis a cras semper auctor neque vitae tempus. Pellentesque adipiscing commodo elit at imperdiet dui. </p>
+                </div>
+                <div class="slider__item">
+                    <img style="float: left; margin-right: 80px; margin-bottom: 90px;" src="img/mark.png" alt="h" width="350" height="350" >
+                    <p style="color:#2476c9; margin-top: 15px; font-weight: 600;">Марк</p>
+                    <p style="margin-top:25px; margin-bottom: 15px;" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Adipiscing elit ut aliquam purus sit. Neque convallis a cras semper auctor neque vitae tempus. Pellentesque adipiscing commodo elit at imperdiet dui. </p>
+                    <p style="margin-top:0;  margin-bottom: 15px;">Віктору є що про що розповісти. Він знає все про створення та керування великими компаніями, ефективну комунікацію, успішні проекти і багато чого іншого. При цьому він ніколи не скаже, що знає все - саморозвиток для нього не закінчується жодної хвилини.</p>
+                    <p style="margin-top:0;  margin-bottom: 15px;">Neque convallis a cras semper auctor neque vitae tempus. Pellentesque adipiscing commodo elit at imperdiet dui. </p>
+                    <p style="margin-top:0;  margin-bottom: 15px;"> Adipiscing elit ut aliquam purus sit. Neque convallis a cras semper auctor neque vitae tempus. Pellentesque adipiscing commodo elit at imperdiet dui. </p>
+                
+                </div>
+            </div>
+            </div>
+    </div>
 
 
 
