--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
@@ -31,6 +31,48 @@
                 </nav>
             </div>
         </header>
+
+
+
+
+        <header class="header2">
+            <div class="container2">
+                <div class="header__body">
+                    <a href="#" class="header__logo">
+                        <img src="img/logo_Oxit.png">
+                    </a>
+                    <div class="header__burger">
+                        <span></span>
+                    </div>
+                    <nav class="header__menu">
+                        <ul class="header__list">
+                            <li>
+                                <a href="" class="header__link">main</a>
+                            </li>
+                            <li>
+                                <a href="" class="header__link">contact</a>
+                            </li>
+                            <li>
+                                <a href="" class="header__link">number</a>
+                            </li>
+                            <li>
+                                <a href="" class="header__link"></a>
+                            </li>
+                            <li>
+                                <a href="" class="header__link">verify</a>
+                            </li>
+                            <li>
+                                <a href="" class="header__link">register</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
+
+
+
+
         <main class="main">
             <div class="main_container">
                 <div class="main_content">
@@ -138,8 +180,6 @@
                 </div>
         </div>
         </div>
-
-
         <div class="video_wrapper">
             <div class="video_content">
                 <div class="text">
