--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container2">
                 <div class="header__body">
                     <a href="#" class="header__logo">
-                        <img src="img/logo_Oxit.png">
+                        <img src="img/logo_Oxit.png" class="logo" width="60px" height="60px">
                     </a>
                     <div class="header__burger">
                         <span></span>
