Add adaptive on mobile

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="build_title">
                     <h2 style="text-decoration:none; font-weight: 400; font-size: 27px; color: #252525;">Курс "Розробка сайтів"</h2>
                 </div>
-            <div class="build_content">
+            <div class="build_content" id="mobile-slider">
                 <div class="site_block1">
                     <div class="icon1">
                     <img src="img/icons/course-icon-1.png" alt="icon" width="80" height="80">
@@ -159,21 +159,21 @@
 
 
         <div class="slider_container">
-            <div class="slider_build"><h2 style="text-align:center; padding-top: 50px; font-weight: 400;">Що кажуть студенти наших курсів:</h2></div>
+            <div class="slider_build"><h2 style="text-align:center; padding-top: 50px; font-weight: 400; padding-bottom: 30px;">Що кажуть студенти наших курсів:</h2></div>
             <div class="slider_content">
                <div class="slider">
                 <div class="slider__item filter">
-                    <p style="text-align:center; font-size: 16px; color: #787878; padding-left: 200px; padding-right: 200px; padding-top: 30px;">Під час проходження курсів я навчився створювати не досить складні сайти та знайшов справу, якою хочу займатись. Після успішного завершення курсів мені надали можливість продовжити навчання в якості Intern Site Builder. Зараз я можу з впевненістю сказати, що Drupal та Oxit кардинально змінили моє життя.</p>
+                    <p class="text">Під час проходження курсів я навчився створювати не досить складні сайти та знайшов справу, якою хочу займатись. Після успішного завершення курсів мені надали можливість продовжити навчання в якості Intern Site Builder. Зараз я можу з впевненістю сказати, що Drupal та Oxit кардинально змінили моє життя.</p>
                     <h3 style="text-align:center; color: #252525; padding-top: 30px; font-weight: 400;">Коля</h3>
                     <p style="text-align:center; color:#333333; font-size: 13px; padding-top: 8px; padding-bottom: 50px;" >Drupal developer</p>
                 </div>
                 <div class="slider__item">
-                    <p style="text-align:center; font-size: 16px; color: #787878; padding-left: 200px; padding-right: 200px; padding-top: 30px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id vehicula tellus. Sed fermentum convallis tellus eu tempus. In lacus eros, suscipit eleifend venenatis sed, vulputate ut arcu. Curabitur id lectus faucibus, consequat sem nec, commodo nunc. Donec et imperdiet elit. Phasellus consectetur et lacus vel tempor. </p>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id vehicula tellus. Sed fermentum convallis tellus eu tempus. In lacus eros, suscipit eleifend venenatis sed, vulputate ut arcu. Curabitur id lectus faucibus, consequat sem nec, commodo nunc. Donec et imperdiet elit. Phasellus consectetur et lacus vel tempor. </p>
                     <h3 style="text-align:center; color: #252525; padding-top: 30px; font-weight: 400;">Олександр</h3>
                     <p style="text-align:center; color: #333333; font-size: 13px; padding-top: 8px;" >Drupal developer</p>
                 </div>
                 <div class="slider__item">
-                    <p style="text-align:center; font-size: 16px; color: #787878; padding-left: 200px; padding-right: 200px; padding-top: 30px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id vehicula tellus. Sed fermentum convallis tellus eu tempus. In lacus eros, suscipit eleifend venenatis sed, vulputate ut arcu. Curabitur id lectus faucibus, consequat sem nec, commodo nunc. Donec et imperdiet elit. Phasellus consectetur et lacus vel tempor. </p>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id vehicula tellus. Sed fermentum convallis tellus eu tempus. In lacus eros, suscipit eleifend venenatis sed, vulputate ut arcu. Curabitur id lectus faucibus, consequat sem nec, commodo nunc. Donec et imperdiet elit. Phasellus consectetur et lacus vel tempor. </p>
                     <h3 style="text-align:center; color: #252525; padding-top: 30px; font-weight: 400;">Микола</h3>
                     <p style="text-align:center; color: #333333; font-size: 13px; padding-top: 8px;" >Drupal developer</p>
                 </div>
