--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
                     <nav class="header__menu">
                         <ul class="header__list">
                             <li>
-                                <a href="" class="header__link">main</a>
+                                <a href="" class="header__link">Головна</a>
                             </li>
                             <li>
-                                <a href="" class="header__link">contact</a>
+                                <a href="" class="header__link">Програма курсу</a>
                             </li>
                             <li>
-                                <a href="" class="header__link">number</a>
+                                <a href="" class="header__link">Відгуки про курс</a>
                             </li>
                             <li>
-                                <a href="" class="header__link"></a>
+                                <a href="" class="header__link">Відео</a>
                             </li>
                             <li>
-                                <a href="" class="header__link">verify</a>
+                                <a href="" class="header__link">Ментори</a>
                             </li>
                             <li>
-                                <a href="" class="header__link">register</a>
+                                <a href="" class="header__link">Подати заявку</a>
                             </li>
                         </ul>
                     </nav>
